update checkout and create discout vouchers
